--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hbs": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "nodemailer": "^6.9.8",
     "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
